[package]

name = "prettytable-rs"
version = "0.10.0"
description = "A library for printing pretty formatted tables in terminal"
homepage = "https://github.com/phsym/prettytable-rs"
repository = "https://github.com/phsym/prettytable-rs"
documentation = "https://docs.rs/crate/prettytable-rs/"
readme = "README.md"
authors = [ "Pierre-Henri Symoneaux" ]
keywords = ["tab", "table", "format", "pretty", "print"]
categories = ["command-line-interface"]
license = "BSD-3-Clause"
edition = "2018"
exclude = [
    "prettytable-evcxr.png"
]

[badges]
appveyor = { repository = "phsym/prettytable-rs", branch = "master", service = "github" }
travis-ci = { repository = "phsym/prettytable-rs", branch = "master" }
codecov = { repository = "phsym/prettytable-rs", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[features]
default = ["win_crlf", "csv"]
evcxr = []
win_crlf = []

[[bin]]
name = "main"
edition = "2018"
path = "src/main.rs"

[lib]
name = "prettytable"

[dependencies]
unicode-width = "0.1"
term = "0.7"
lazy_static = "1.4"
is-terminal = "0.4"
encode_unicode = "1.0"
csv = { version = "1.1", optional = true }
